See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.49.00

              pnmconvol: Add -matrix, -matrixfile.

              pambayer: add -nointerpolate.

              Add pnmmercator.

              jpeg2ktopam: Work with JP2 input as well as JPC.

              ppmrainbow: Make new directory for temporary files.
              Prevents interference by other user who shares the main
              temporary file directory.

              pamtouil: fix crash when -name option doesn't contain an
              underscore.
              
              pamtosvg: fix some bug with unset Z coordinate.

              pnmtofiasco, fiascotopnm: fix bug on bigendian machine.

              pngtopam: use png_create_read_struct() instead of
              png_create_write_struct().  Broken since 10.48.

              configure: advise if adding -lz -lm fixes libpng link problem.

              makeman: some fixes or enhancements.

09.09.27 BJH  Release 10.48.00

              ppmsvgalib: Wait to initialize Svgalib to prevent it from
              interfering with error messages early code might issue, and
              leaving the console in an undesirable state if the failures
              cause the program to abort early.

              tifftopnm: wait for Pamflip processes to terminate before
              exiting.

              Remove pngtopnm from the package.  Pngtopnm is now an alias
              for Pngtopam.

              pngtopam, pnmtopng: Compiles with libpng 1.4 beta.

              pamtotiff: do miniswhite properly with 8 and 16 bit samples.

              pamsumm: fix syntax error message.

              pambayer: fix unconditional crash/failure when you aren't using
              Standard Input.

              Add pbmtocis, cistopbm.  Thanks John Elliott
              <jce@seasip.demon.co.uk>.

              Build: tifftopnm builds on systems without fork().
